# ADRC

./: LICENSE  README.md  ReferenceLinksRoughNotes.txt  TODO.txt  architecture.md  deepstream_installation.md
adso/: CMakeLists.txt
adso/include/: camera_cntrl_mgr.h  camera_controller.h  detector_engine.h  display_standalone_camera.h
adso/src/: camera_cntrl_mgr.cpp  camera_controller.cpp  detector_engine.cpp  display_standalone_camera.cpp  main.cpp
adso_disparity_cv/: CMakeLists.txt  readme.md
adso_disparity_cv/src/: jetson_disparity_cv_pipeline.cpp
adso_nvmm/: CMakeLists.txt  readme.md
adso_nvmm/doc/: config_infer_primary_template.txt  config_infer_secondary.txt  sys_software_requirement_spec.md
adso_nvmm/scripts/: config_infer_primary.txt  resnet18_trafficcamnet.etlt_b30_gpu0_int8.engine
adso_nvmm/src/: jetson_gst_pipeline.cpp
